#2  Add i18n support and integrate Tailwind CSS
This commit introduces internationalization (i18n) support for Polish localization in the Angular application. It adds new dependencies for Tailwind CSS and tw-elements, along with new components (`MenuComponent` and `TopBarComponent`).

Key changes include:
- Updated `angular.json` for i18n configurations and build options.
- Modified `package.json` and `package-lock.json` to include new dependencies.
- Restructured `AppComponent` to incorporate new components.
- Updated `main.ts` for Angular localization reference.
- Adjusted `styles.scss` to utilize Tailwind CSS and tw-elements.
- Updated TypeScript configuration files for localization types.
- Created new translation files for English and Polish.
- Added `.postcssrc.json` for PostCSS configuration.
- Updated `read.me` with instructions for extracting i18n strings.

--- a/CollectionManager.FrontEnd/CollectionManager.Angular/src/styles.scss
+++ b/CollectionManager.FrontEnd/CollectionManager.Angular/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+//@import "tailwindcss";
+//@import "../node_modules/tw-elements/css/tw-elements.min.css";
+
+@use "tailwindcss";
+@use "../node_modules/tw-elements/css/tw-elements.min.css";
